# logic_probe

./: .gitignore  .gitmodules  .mxproject  Makefile  README.md  default.nix  flake.nix  logic_probe.ioc
.github/workflows/: c-cpp.yml
Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
logic_probe/: .mxproject  CMakeLists.txt  STM32G031K8Tx_FLASH.ld  logic_probe.ioc  logic_probe_dev.ioc
logic_probe/Core/Inc/: callbacks.h  global_structs.h  global_vars.h  loop.h  main.h  measure_tools.h  my_bool.h  my_error_handle.h  stm32g0xx_it.h  uart_control.h  utils.h
logic_probe/Core/Inc/ansi/: ansi_abstraction_layer.h  ansi_ascii_text.h  ansi_display.h  ansi_pages.h
logic_probe/Core/Inc/ansi/pages/: ansi_page_channel_settings.h  ansi_page_frequency_reader.h  ansi_page_i2c.h  ansi_page_impulse_generator.h  ansi_page_main.h  ansi_page_shift_register.h  ansi_page_spi.h  ansi_page_uart.h  ansi_page_voltage_measure.h  ansi_pages_neopixel_measure.h
logic_probe/Core/Inc/measure/: adc_control.h  levels.h  signal_detector.h  signal_generator.h  tim_setup.h
logic_probe/Core/Inc/measure/advanced/: i2c.h  neopixel.h  shift_register.h  spi.h  uart.h
logic_probe/Core/Inc/perif/: uart_control.h
logic_probe/Core/Inc/perif/inputs/: extern_button.h
logic_probe/Core/Inc/perif/outputs/: gpio_outputs.h  ssd1306.h  visual_output.h
logic_probe/Core/Inc/perif/uart_control/: control_frequency_reader.h  control_i2c.h  control_levels.h  control_neopixel_measure.h  control_shift_register.h  control_spi.h  control_uart_measure.h  control_voltage_measure.h  uart_control.h
logic_probe/Core/Src/: callbacks.c  loop.c  main.c  measure_tools.c  my_error_handle.c  stm32g0xx_hal_msp.c  stm32g0xx_hal_msp_original.c  stm32g0xx_it.c  stm32g0xx_it_original.c  syscalls.c  system_stm32g0xx.c  uart_control.c  utils.c
logic_probe/Core/Src/ansi/: ansi_abstraction_layer.c  ansi_ascii_text.c  ansi_display.c  ansi_pages.c
logic_probe/Core/Src/ansi/pages/: ansi_page_channel_settings.c  ansi_page_frequency_reader.c  ansi_page_i2c.c  ansi_page_impulse_generator.c  ansi_page_levels.c  ansi_page_main.c  ansi_page_neopixel_measure.c  ansi_page_shift_register.c  ansi_page_spi.c  ansi_page_uart.c  ansi_page_voltage_measure.c
logic_probe/Core/Src/measure/: adc_control.c  levels.c  signal_detector.c  signal_generator.c  tim_setup.c
logic_probe/Core/Src/measure/advanced/: i2c.c  neopixel.c  shift_register.c  spi.c  uart.c
logic_probe/Core/Src/perif/: uart_control.c
logic_probe/Core/Src/perif/inputs/: extern_button.c
logic_probe/Core/Src/perif/outputs/: gpio_outputs.c  ssd1306.c  visual_output.c
logic_probe/Core/Src/perif/uart_control/: control_frequency_reader.c  control_i2c.c  control_impulse_generator.c  control_levels.c  control_neopixel_measure.c  control_shift_register.c  control_spi.c  control_uart_measure.c  control_voltage_measure.c  uart_control.c
logic_probe/cmake/stm32cubemx/: CMakeLists.txt
rpi_pico/: CMakeLists.txt  global_structs.h  global_vars.c  global_vars.h  loop.c  loop.h  main.c  probe_error.c  probe_error.h  probe_usb.c  probe_usb.h
rpi_pico/ansi/: ansi_abstraction_layer.c  ansi_ascii_text.c  ansi_pages.c  ansi_pages.h
rpi_pico/ansi/pages/: ansi_page_frequency_reader.c  ansi_page_frequency_reader.h  ansi_page_impulse_generator.c  ansi_page_impulse_generator.h  ansi_page_levels.c  ansi_page_levels.h  ansi_page_main.c  ansi_page_voltage_measure.c  ansi_page_voltage_measure.h
rpi_pico/measure/: adc_control.c  adc_control.h  levels.c  levels.h  pulse_down.pio  pulse_up.pio  signal_detection.c  signal_detection.h  signal_generation.c  signal_generation.h
rpi_pico/perif/uart_control/: control_frequency_reader.c  control_frequency_reader.h  control_impulse_generator.c  control_impulse_generator.h  control_levels.c  control_uart_measure.c  control_uart_measure.h  control_voltage_measure.c  control_voltage_measure.h  uart_control.c  uart_control.h
typst_documentation/: bibliography.bib  flake.nix  main.typ  manual-rpi.typ  manual-stm.typ
typst_documentation/res/: PowerShell.sublime-syntax
typst_documentation/template/: front.typ  template.typ
